[tool.poetry]
name = "sudoku_solver"
version = "0.1.0"
description = "Sudoku solver and puzzle generator"
authors = ["Chris Strange <mr.chris.strange@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
mypy = "^0.780"
pytest = "^5.4.3"
flake8 = "^3.8.3"
autopep8 = "^1.5.3"
isort = "^4.3.21"
flake8-breakpoint = "^1.1.0"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^0.4.0"
flake8-polyfill = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
